added deleteBlogPost method and swagger on it
