# pkg/routes/blog.go
@@ -37,7 +37,7 @@ func (b *blogRoutes) initBlogRoutes(e *echo.Echo) {
 	blog.GET("/getAll", b.blogController.GetBlogPosts)
 	blog.GET("/get/user", b.blogController.GetBlogPostsOfUser)
 	blog.PUT("/update", b.blogController.UpdateBlogPost, middlewares.Auth)
-	//blog.DELETE("/delete/:userID/:postID", b.blogController.DeleteBlogPost, middlewares.Auth)
+	blog.DELETE("/delete", b.blogController.DeleteBlogPost, middlewares.Auth)
 	//
 	//// like and comment routes
 	//blog.POST("/like/:userID/:postID", b.blogController.AddAndRemoveLike, middlewares.Auth)
